[tool.poetry]
name = "tfexamtest"
version = "0.1.0"
description = "Tensorflow Exam Test"
authors = ["Shikanime Deva <deva.shikanime@protonmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
tensorflow = "2.7.0"
tensorflow-datasets = "4.4.0"
Pillow = "8.4.0"
pandas = "1.3.4"
numpy = "1.21.4"
scipy = "1.7.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
